deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcenteremu
  labels:
    app.kubernetes.io/name: vcenteremu
spec:
  selector:
    app.kubernetes.io/name: vcenteremu
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
